# subprocess

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: bytes.h  exception.h  file.h  popen.h  popen_new.h  streamable.h  subprocess.h  types.h  types_new.cpp  types_new.h
include/subprocess/: exception.h  popen.h  streamable.h  types.h
src/: CMakeLists.txt  bytes.cpp  bytes.h  file.cpp  file.h  main.cpp  pipe.h  popen.cpp  popen.h  popen_new.cpp  readable.h  streamable.cpp  types.cpp  types.h  utils.h  writable.h
test/: CMakeLists.txt  bytes_test.cpp  popen_test.cpp  streamable_test.cpp
test/helpers/: CMakeLists.txt  echo.cpp  fail.cpp  process.cpp  return.cpp  sleep.cpp
